tests/errors/class_structure_violations.out
Error in tests/errors/class_structure_violations.sad:
[E6001] Traceback (most recent call last):
  File tests/errors/class_structure_violations.sad, line 1, in <program>
    val = super()
          ^^^^^
  File tests/errors/class_structure_violations.sad, line 1, in super
    val = super()
          ^
ArgumentError: super() can only be called inside a method body
